# docmind-rag

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile
backend/app/: main.py
backend/app/agent/: graph.py  llm.py  prompts.py  state.py
backend/app/api/: auth.py  chat.py  chunks.py  dependencies.py  documents.py  eval.py
backend/app/core/: config.py  database.py  exceptions.py  langfuse.py  logging.py  metrics.py  middleware.py
backend/app/models/: document.py  eval.py  user.py
backend/app/pipeline/: prompts.py
backend/app/schemas/: auth.py  chat.py  eval.py  pipeline.py
backend/app/services/: auth.py  eval.py  ingestion.py  rag.py
backend/app/vectorstore/: elasticsearch_store.py  factory.py  qdrant_client.py
backend/app/workers/: celery_app.py  eval_tasks.py  ingest_tasks.py
docs/: UI_TESTING_GUIDE.md
docs/plans/: 2026-03-05-week1-ingestion-pipeline.md  2026-03-05-week2-agentic-rag-pipeline.md  2026-03-08-chat-ux-improvements-design.md  2026-03-08-chat-ux-improvements.md  2026-03-08-glass-observatory-redesign.md  2026-03-08-post-week3-implementation.md  2026-03-08-post-week3-roadmap-design.md  2026-03-09-eval-pipeline-design.md  2026-03-09-eval-pipeline-impl.md
docs/superpowers/plans/: 2026-03-12-custom-eval-dataset.md  2026-03-21-elasticsearch-integration.md
docs/superpowers/specs/: 2026-03-12-custom-eval-dataset-design.md  2026-03-21-elasticsearch-integration-design.md
eval/: README.md  run_eval.py
eval/datasets/: custom_dataset.json  download_financebench.py
eval/notebooks/: 01_baseline_eval.ipynb  02_chunking_ablation.ipynb
eval/results/: custom_results.json  financebench_results.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: chat.ts  chunks.ts  client.ts  documents.ts
frontend/src/hooks/: useChunks.ts  (+2 more)
infra/: prometheus.yml
scripts/: seed_custom_eval.py  seed_demo_data.py
tests/: conftest.py
tests/integration/: test_chat_pipeline.py  test_ingestion_pipeline.py
tests/unit/: test_auth_api.py  test_auth_service.py  test_chunks_api.py  test_eval_service.py  test_langfuse_init.py  test_langfuse_integration.py  test_metrics.py
(+75 files in other folders)
