[project]
name = "docmind-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.84.0",
    "asyncpg>=0.31.0",
    "celery[redis]>=5.6.2",
    "cohere>=5.20.7",
    "datasets>=4.6.1",
    "docling>=2.76.0",
    "fastapi>=0.135.1",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=1.1.10",
    "langfuse>=2.60.0",
    "langgraph>=1.0.10",
    "openai>=2.24.0",
    "pandas>=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-client>=0.24.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "pymupdf>=1.27.1",
    "pymupdf4llm>=0.3.4",
    "python-multipart>=0.0.22",
    "elasticsearch[async]>=8.15.0,<9",
    "ragas>=0.4.3",
    "sqlalchemy[asyncio]>=2.0.48",
    "sse-starlette>=3.3.2",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
testpaths = ["tests"]
